--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.1",
+    "axios": "^1.9.0",
     "framer-motion": "^12.12.1",
     "i18next": "^25.1.3",
     "i18next-browser-languagedetector": "^8.1.0",
