--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.1",
     "axios": "^1.9.0",
+    "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
     "i18next": "^25.1.3",
     "i18next-browser-languagedetector": "^8.1.0",
@@ -24,7 +25,8 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.5.1",
     "react-redux": "^9.2.0",
-    "react-router": "^7.6.0"
+    "react-router": "^7.6.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
