--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^25.1.3",
     "i18next-browser-languagedetector": "^8.1.0",
     "k-ticket": "file:",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
